daxa/include/daxa/command_recorder.hpp

    struct PushConstantInfo
    {
        void const * data = {};
        u64 size = {};
    };
    struct CommandRecorderInfo
    {
        QueueFamily queue_family = {};
        SmallString name = {};
    };
    struct ImageBlitInfo
    {
        ImageId src_image = {};
        [[deprecated("Ignored parameter, layout must be GENERAL; API:3.2")]] ImageLayout src_image_layout = ImageLayout::GENERAL;
        ImageId dst_image = {};
        [[deprecated("Ignored parameter, layout must be GENERAL; API:3.2")]] ImageLayout dst_image_layout = ImageLayout::GENERAL;
        ImageArraySlice src_slice = {};
        std::array<Offset3D, 2> src_offsets = {};
        ImageArraySlice dst_slice = {};
        std::array<Offset3D, 2> dst_offsets = {};
        Filter filter = {};
    };
    struct BufferCopyInfo
    {
        BufferId src_buffer = {};
        BufferId dst_buffer = {};
        usize src_offset = {};
        usize dst_offset = {};
        usize size = {};
    };
    struct BufferImageCopyInfo
    {
        BufferId buffer = {};
        usize buffer_offset = {};
        ImageId image = {};
        [[deprecated("Ignored parameter, layout must be GENERAL; API:3.2")]] ImageLayout image_layout = ImageLayout::GENERAL;
        ImageArraySlice image_slice = {};
        Offset3D image_offset = {};
        Extent3D image_extent = {};
    };
    struct ImageBufferCopyInfo
    {
        ImageId image = {};
        [[deprecated("Ignored parameter, layout must be GENERAL; API:3.2")]] ImageLayout image_layout = ImageLayout::GENERAL;
        ImageArraySlice image_slice = {};
        Offset3D image_offset = {};
        Extent3D image_extent = {};
        BufferId buffer = {};
        usize buffer_offset = {};
    };
    struct ImageCopyInfo
    {
        ImageId src_image = {};
        [[deprecated("Ignored parameter, layout must be GENERAL; API:3.2")]] ImageLayout src_image_layout = daxa::ImageLayout::GENERAL;
        ImageId dst_image = {};
        [[deprecated("Ignored parameter, layout must be GENERAL; API:3.2")]] ImageLayout dst_image_layout = daxa::ImageLayout::GENERAL;
        ImageArraySlice src_slice = {};
        Offset3D src_offset = {};
        ImageArraySlice dst_slice = {};
        Offset3D dst_offset = {};
        Extent3D extent = {};
    };
    struct ImageClearInfo
    {
        [[deprecated("Ignored parameter, layout must be GENERAL; API:3.2")]] ImageLayout dst_image_layout = daxa::ImageLayout::GENERAL;
        ClearValue clear_value = {};
        ImageId dst_image = {};
        ImageMipArraySlice dst_slice = {};
    };
    struct BufferClearInfo
    {
        BufferId buffer = {};
        usize offset = {};
        usize size = {};
        u32 clear_value = {};
    };
    enum struct ResolveMode
    {
        NONE = 0,
        SAMPLE_ZERO = 0x00000001,
        AVERAGE = 0x00000002,
        MIN = 0x00000004,
        MAX = 0x00000008,
    };
    struct AttachmentResolveInfo
    {
        ResolveMode mode = ResolveMode::AVERAGE;
        ImageViewId image = {};
        [[deprecated("Ignored parameter, layout must be GENERAL; API:3.2")]] ImageLayout layout = ImageLayout::GENERAL;
    };
    struct RenderAttachmentInfo
    {
        ImageViewId image_view = {};
        [[deprecated("Ignored parameter, layout must be GENERAL; API:3.2")]] ImageLayout layout = ImageLayout::GENERAL;
        AttachmentLoadOp load_op = AttachmentLoadOp::DONT_CARE;
        AttachmentStoreOp store_op = AttachmentStoreOp::STORE;
        ClearValue clear_value = {};
        Optional<AttachmentResolveInfo> resolve = {};
    };
    struct RenderPassBeginInfo
    {
        FixedList<RenderAttachmentInfo, 8> color_attachments = {};
        Optional<RenderAttachmentInfo> depth_attachment = {};
        Optional<RenderAttachmentInfo> stencil_attachment = {};
        Rect2D render_area = {};
    };
    struct TraceRaysInfo
    {
        uint32_t width = 1;
        uint32_t height = 1;
        uint32_t depth = 1;
        uint32_t raygen_shader_binding_table_offset = {};
        uint32_t miss_shader_binding_table_offset = {};
        uint32_t miss_shader_binding_table_stride = {};
        uint32_t hit_shader_binding_table_offset = {};
        RayTracingShaderBindingTable shader_binding_table;
    };
    struct TraceRaysIndirectInfo
    {
        DeviceAddress indirect_device_address = {};
        uint32_t raygen_shader_binding_table_offset = {};
        uint32_t miss_shader_binding_table_offset = {};
        uint32_t miss_shader_binding_table_stride = {};
        uint32_t hit_shader_binding_table_offset = {};
        RayTracingShaderBindingTable shader_binding_table;
    };
    struct DispatchInfo
    {
        u32 x = 1;
        u32 y = 1;
        u32 z = 1;
    };
    struct DispatchIndirectInfo
    {
        BufferId indirect_buffer = {};
        usize offset = {};
    };
    struct DrawMeshTasksIndirectInfo
    {
        BufferId indirect_buffer = {};
        usize offset = {};
        u32 draw_count = 1;
        u32 stride = 12;
    };
    struct DrawMeshTasksIndirectCountInfo
    {
        BufferId indirect_buffer = {};
        usize offset = {};
        BufferId count_buffer = {};
        usize count_offset = {};
        u32 max_count = {};
        u32 stride = 12;
    };
    struct DrawInfo
    {
        u32 vertex_count = {};
        u32 instance_count = 1;
        u32 first_vertex = {};
        u32 first_instance = {};
    };
    struct DrawIndexedInfo
    {
        u32 index_count = {};
        u32 instance_count = 1;
        u32 first_index = {};
        i32 vertex_offset = {};
        u32 first_instance = {};
    };
    struct DrawIndirectInfo
    {
        BufferId draw_command_buffer = {};
        usize indirect_buffer_offset = {};
        u32 draw_count = 1;
        u32 draw_command_stride = {};
        bool is_indexed = {};
    };
    struct DrawIndirectCountInfo
    {
        BufferId draw_command_buffer = {};
        usize indirect_buffer = {};
        BufferId count_buffer = {};
        usize count_buffer_offset = {};
        u32 max_draw_count = static_cast<u32>(std::numeric_limits<u16>::max());
        u32 draw_command_stride = {};
        bool is_indexed = {};
    };
    struct ResetEventInfo
    {
        Event & event;
        PipelineStageFlags stage = {};
    };
    struct WriteTimestampInfo
    {
        TimelineQueryPool & query_pool;
        PipelineStageFlags pipeline_stage = {};
        u32 query_index = {};
    };
    struct ResetTimestampsInfo
    {
        TimelineQueryPool & query_pool;
        u32 start_index = {};
        u32 count = {};
    };
    struct CommandLabelInfo
    {
        std::array<f32, 4> label_color = {0.463f, 0.333f, 0.671f, 1.0f};
        SmallString name = {};
    };
    struct DepthBiasInfo
    {
        f32 constant_factor = {};
        f32 clamp = {};
        f32 slope_factor = {};
    };
    struct SetIndexBufferInfo
    {
        BufferId id = {};
        usize offset = {};
        IndexType index_type = IndexType::uint32;
    };
    struct BuildAccelerationStructuresInfo
    {
        daxa::Span<TlasBuildInfo const> tlas_build_infos = {};
        daxa::Span<BlasBuildInfo const> blas_build_infos = {};
    };
    struct CommandRecorder;
    struct DAXA_EXPORT_CXX RenderCommandRecorder
    {
      private:
        daxa_CommandRecorder internal = {};
        friend struct CommandRecorder;
      public:
        RenderCommandRecorder() = default;
        ~RenderCommandRecorder();
        RenderCommandRecorder(RenderCommandRecorder const &) = delete;
        RenderCommandRecorder & operator=(RenderCommandRecorder const &) = delete;
        RenderCommandRecorder(RenderCommandRecorder &&);
        RenderCommandRecorder & operator=(RenderCommandRecorder &&);
        [[nodiscard]] auto end_renderpass() && -> CommandRecorder;
        void push_constant_vptr(PushConstantInfo const & info);
        template <typename T>
        void push_constant(T const & constant, [[maybe_unused]] [[deprecated("parameter ignored. API: 3.1")]] u32 offset = 0)
        {
            push_constant_vptr({
                .data = static_cast<void const *>(&constant),
                .size = static_cast<u32>(sizeof(T)),
            });
        }
        void set_pipeline(RasterPipeline const & pipeline);
        void set_viewport(ViewportInfo const & info);
        void set_scissor(Rect2D const & info);
        void set_rasterization_samples(RasterizationSamples info);
        void set_depth_bias(DepthBiasInfo const & info);
        void set_index_buffer(SetIndexBufferInfo const & info);
        void draw(DrawInfo const & info);
        void draw_indexed(DrawIndexedInfo const & info);
        void draw_indirect(DrawIndirectInfo const & info);
        void draw_indirect_count(DrawIndirectCountInfo const & info);
        void draw_mesh_tasks(u32 x, u32 y, u32 z);
        void draw_mesh_tasks_indirect(DrawMeshTasksIndirectInfo const & info);
        void draw_mesh_tasks_indirect_count(DrawMeshTasksIndirectCountInfo const & info);
    };
    struct DAXA_EXPORT_CXX CommandRecorder
    {
      protected:
        daxa_CommandRecorder internal = {};
        friend struct RenderCommandRecorder;
      public:
        CommandRecorder() = default;
        ~CommandRecorder();
        CommandRecorder(CommandRecorder const &) = delete;
        CommandRecorder & operator=(CommandRecorder const &) = delete;
        CommandRecorder(CommandRecorder &&);
        CommandRecorder & operator=(CommandRecorder &&);
        void copy_buffer_to_buffer(BufferCopyInfo const & info);
        voidcopy_buffer_to_image(BufferImageCopyInfo const & info);
        void copy_image_to_buffer(ImageBufferCopyInfo const & info);
        void copy_image_to_image(ImageCopyInfo const & info);
        void blit_image_to_image(ImageBlitInfo const & info);
        void clear_buffer(BufferClearInfo const & info);
        void clear_image(ImageClearInfo const & info);
        void pipeline_barrier(BarrierInfo const & info);
        void pipeline_image_barrier(ImageBarrierInfo const & info);
        void signal_event(EventSignalInfo const & info);
        void wait_events(daxa::Span<EventWaitInfo const> const & infos);
        void wait_event(EventWaitInfo const & info);
        void reset_event(ResetEventInfo const & info);
#if !DAXA_REMOVE_DEPRECATED
        [[deprecated("Use pipeline_image_barrier instead, API:3.2")]] void pipeline_barrier_image_transition(ImageMemoryBarrierInfo const & info);
#endif
        void destroy_buffer_deferred(BufferId id);
        void destroy_image_deferred(ImageId id);
        void destroy_image_view_deferred(ImageViewId id);
        void destroy_sampler_deferred(SamplerId id);
        void write_timestamp(WriteTimestampInfo const & info);
        void reset_timestamps(ResetTimestampsInfo const & info);
        void begin_label(CommandLabelInfo const & info);
        void end_label();
        [[nodiscard]] auto complete_current_commands() -> ExecutableCommandList;
        [[nodiscard]] auto info() const -> CommandRecorderInfo const &;
        void push_constant_vptr(PushConstantInfo const & info);
        template <typename T>
        void push_constant(T const & constant)
        {
            push_constant_vptr({
                .data = &constant,
                .size = static_cast<u32>(sizeof(T))
            });
        }
        void build_acceleration_structures(BuildAccelerationStructuresInfo const & info);
        void set_pipeline(ComputePipeline const & pipeline);
        void dispatch(DispatchInfo const & info);
        void dispatch_indirect(DispatchIndirectInfo const & info);
        void set_pipeline(RayTracingPipeline const & pipeline);
        void trace_rays(TraceRaysInfo const & info);
        void trace_rays_indirect(TraceRaysIndirectInfo const & info);
        [[nodiscard]] auto begin_renderpass(RenderPassBeginInfo const & info) && -> RenderCommandRecorder;
    };